refactoring_2023_05_24 updates for cleaner code